# SimplePicture3D

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Consultant_Critical_Review_28Feb2026.md  Consultant_Recommendations_Report_6Feb2026.md  Consultant_Recommendations_Report_7Feb2026.md  Consultant_Review_1Mar2026.md  INIT_PROMPT.md  LICENSE  PENDING_APPLE_CHANGES.md  README.md  SETUP_NOTES.md  index.html  package-lock.json  package.json  prd.md  todo.md  tsconfig.json  vite.config.ts
.agents/: documentation-specialist.md  junior-engineer-2d.md  junior-engineer-3d.md  quality-engineer.md  researcher.md  security-specialist.md  senior-engineer.md  system-architect.md  ui-designer.md
.claude/: settings.local.json
.claude/agents/: senior-engineer.md
.claude/resources/: rust-dev-resource.md
.claude/templates/: TEMPLATE-issue-brief.md  TEMPLATE-junior-status.md
.cursor/rules/: architect.mdc  (+11 more)
RESEARCH/: 3d-reconstruction.md  AI_DEVELOPMENT_GUIDE.md  GOTCHAS.md  PIVOT_PLAN_2.5D_TO_3D.md  README.md  architecture.md  frontend.md  python-ml.md  rust-crates.md  tauri.md  threejs.md
SPRINTS/: SPRINT_TASKING_TEMPLATE.md  TEST_PLAN_TEMPLATE.md
docs/: ARCHITECT_REVIEW_2026-02-21.md  architecture.md  beta-onboarding.md  developer-guide.md  release-notes-draft.md  security-checklist.md  setting_up_your_Mac.md  tech-stack-approval.md  testing.md  threat-model.md  user-guide.md
python/: README.md  requirements.txt
scripts/: gen_fixtures.mjs  gen_icon_win.py
src/: App.svelte  app.css  main.ts  test-setup.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: depth_adjust.rs  ipc_depth_map_serialization.rs  mesh_generation.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: allow-export-stl.toml  allow-generate-depth-map.toml  allow-get-export-defaults.toml  allow-load-image.toml  allow-mask.toml  allow-point-cloud.toml  allow-presets.toml
src-tauri/src/: blank_envelope.rs  depth_adjust.rs  export.rs  file_io.rs  image_loading.rs  lib.rs  main.rs  mask.rs  mesh_generator.rs  preset.rs  python_bridge.rs  settings.rs  undo.rs  volumetric.rs
(+176 files in other folders)
