[package]
name = "simplepicture3d"
version = "0.1.0"
description = "SimplePicture3D — 2D image to 3D surface point cloud for internal UV laser engraving of crystal blanks"
authors = ["SimplePicture3D Contributors"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "simplepicture3d_lib"
crate-type = ["lib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0"
base64 = "0.22"
env_logger = "0.11"
log = "0.4"
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = { version = "2", features = [] }
tauri-plugin-shell = { version = "2", features = [] }
tokio = { version = "1", features = ["fs", "io-util"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "depth_adjust"
harness = false

[[bench]]
name = "ipc_depth_map_serialization"
harness = false
